// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-emotion inject-global-basic 1`] = `
"import { injectGlobal } from 'emotion'

injectGlobal\`
  body {
    margin: 0;
    padding: 0;
    & > div {
      display: flex;
    }
  }
  html {
    background: green;
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import { injectGlobal as _injectGlobal } from \\"emotion\\";

_injectGlobal({
  name: \\"1d66lop\\",
  styles: \\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\"
});"
`;

exports[`babel-plugin-emotion inject-global-change-import 1`] = `
"import { injectGlobal as inject } from 'emotion'

inject\`
  body {
    margin: 0;
    padding: 0;
    & > div {
      display: flex;
    }
  }
  html {
    background: green;
  }
\`

let injectGlobal = window.whatever

injectGlobal\`
  body {
    margin: 0;
    padding: 0;
    & > div {
      display: flex;
    }
  }
  html {
    background: green;
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import { injectGlobal as _injectGlobal } from \\"emotion\\";

_injectGlobal({
  name: \\"1d66lop\\",
  styles: \\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\"
});

let injectGlobal = window.whatever;
injectGlobal\`
  body {
    margin: 0;
    padding: 0;
    & > div {
      display: flex;
    }
  }
  html {
    background: green;
  }
\`;"
`;

exports[`babel-plugin-emotion inject-global-with-font-face 1`] = `
"import { injectGlobal } from 'emotion'

injectGlobal\`
  @font-face {
    font-family: 'Patrick Hand SC';
    font-style: normal;
    font-weight: 400;
    src: local('Patrick Hand SC'), local('PatrickHandSC-Regular'),
      url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2)
        format('woff2');
    unicode-range: U+0100-024f, U+1-1eff, U+20a0-20ab, U+20ad-20cf, U+2c60-2c7f,
      U+A720-A7FF;
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import { injectGlobal as _injectGlobal } from \\"emotion\\";

_injectGlobal({
  name: \\"lu7y12\\",
  styles: \\"@font-face{font-family:'Patrick Hand SC';font-style:normal;font-weight:400;src:local('Patrick Hand SC'),local('PatrickHandSC-Regular'),url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');unicode-range:U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf,U+2c60-2c7f,U+A720-A7FF;}\\"
});"
`;

exports[`babel-plugin-emotion inject-global-with-interpolation 1`] = `
"import { injectGlobal } from 'emotion'

let display = window.whatever

injectGlobal\`
  body {
    margin: 0;
    padding: 0;
    display: \${display};
    & > div {
      display: none;
    }
  }
  html {
    background: green;
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import { injectGlobal as _injectGlobal } from \\"emotion\\";
let display = window.whatever;

_injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"
`;

exports[`babel-plugin-emotion keyframes-basic 1`] = `
"import { keyframes } from 'emotion'

const rotate360 = keyframes\`
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import { keyframes as _keyframes } from \\"emotion\\";

const rotate360 =
/*#__PURE__*/
_keyframes({
  name: \\"1q8eu9e\\",
  styles: \\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\"
});"
`;

exports[`babel-plugin-emotion keyframes-with-interpolation 1`] = `
"import { keyframes } from 'emotion'

let endingRotation = window.whatever

const rotate360 = keyframes\`
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(\${endingRotation});
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import { keyframes as _keyframes } from \\"emotion\\";
let endingRotation = window.whatever;

const rotate360 =
/*#__PURE__*/
_keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(\\", endingRotation, \\");}\\");"
`;
